Closed Bug 394120 Opened 16 years ago Closed 16 years ago

"ASSERTION: post-reflow queues not empty" with xul:listboxbody and xul:text

Categories

(Core :: XUL, defect)

x86
macOS
defect
Not set
major

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Assigned: smaug)

References

Details

(5 keywords)

Attachments

(2 files)

*Reloading* the testcase triggers:

###!!! ASSERTION: post-reflow queues not empty.  This means we're leaking: 'mFirstCallbackEventRequest == nsnull && mLastCallbackEventRequest == nsnull', file /Users/jruderman/trunk/mozilla/layout/base/nsPresShell.cpp, line 1402

###!!! ASSERTION: Some objects allocated with AllocateFrame were not freed: 'mFrameCount == 0', file /Users/jruderman/trunk/mozilla/layout/base/nsPresShell.cpp, line 673

I'm marking this bug as major because being able to test for the "Some objects allocated with AllocateFrame were not freed" assertion is important for detecting a class of memory safety bugs.
Flags: blocking1.9?
Assignee: nobody → Olli.Pettay
Attached patch proposed patchSplinter Review
Sorry, my mistake.
Better to post the callback when reflowing, then it gets called always and there
is no need to cancel it.
Attachment #278751 - Flags: superreview?(roc)
Attachment #278751 - Flags: review?(roc)
Blocks: 387033
Attachment #278751 - Flags: superreview?(roc)
Attachment #278751 - Flags: superreview+
Attachment #278751 - Flags: review?(roc)
Attachment #278751 - Flags: review+
Attachment #278751 - Flags: approval1.9+
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Depends on: 368573
Flags: in-testsuite?
qawanted: verify this doesn't regress on the 1.8 branch after bug 387033 lands
Flags: blocking1.8.1.8+
Keywords: qawanted
Keywords: fixed1.8.1.8
I can't really verify this on the 1.8 branch.
My debug 1.8 branch builds are from before this patch was checked in, but I don't get any assertion when reloading the testcase with those.
Flags: blocking1.9?
Crashtest checked in.
Flags: in-testsuite? → in-testsuite+
Component: XP Toolkit/Widgets: XUL → XUL
QA Contact: xptoolkit.xul → xptoolkit.widgets
You need to log in before you can comment on or make changes to this bug.