Bug 394120, 'ASSERTION: post-reflow queues not empty' with xul:listboxbody and xul:text, r+sr+a=roc